--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ codegen-units = 1
 
 [features]
 default = []
-dev = [
-    "bevy/dynamic",
+dev = [ "bevy/dynamic",
 ]
 reload = [
   # This is important on windows for avoiding file locking issues:
@@ -27,16 +26,25 @@ reload = [
 
 [dependencies]
 # bevy things
-bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
-bevy_kira_audio = { version = "0.12" }
-bevy_asset_loader = { version = "0.12" }
+bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
 rand = { version = "0.8" }
-winit = { version = "0.26", default-features = false }
+
+# keep the dependency up to date with bevy_winit
+winit = { version = "0.27", default-features = false }
 image = { version = "0.24", default-features = false }
-benimator = { version = "4.0" }
-bevy_rapier2d = { version = "0.17" }
-bevy_ecs_ldtk = { version = "0.4" }
-bevy_hanabi = { version = "0.4", default-features = false, features = [ "2d" ] }
+
+# plugins etc.
+bevy_kira_audio = { version = "0.13" }
+# bevy_asset_loader = { version = "0.14" }
+bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
+iyes_loopless = { version = "0.9" }
+bevy-inspector-egui = { version = "0.14" }
+benimator = { version = "4.1" }
+bevy_rapier2d = { version = "0.19" }
+bevy_ecs_ldtk = { version = "0.5" }
+bevy_hanabi = { version = "0.5", default-features = false, features = [ "2d" ] }
+
+# additional things
 statig = "0.1"
 
 [build-dependencies]
