--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ codegen-units = 1
 
 [features]
 default = []
-dev = [ "bevy/dynamic",
-]
+dev = [ "bevy/dynamic" ]
 reload = [
   # This is important on windows for avoiding file locking issues:
   "bevy/dynamic",
@@ -35,14 +34,15 @@ image = { version = "0.24", default-features = false }
 
 # plugins etc.
 bevy_kira_audio = { version = "0.13" }
-# bevy_asset_loader = { version = "0.14" }
-bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
+# bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
+bevy_asset_loader = { version = "0.14" }
 iyes_loopless = { version = "0.9" }
 bevy-inspector-egui = { version = "0.14" }
 benimator = { version = "4.1" }
 bevy_rapier2d = { version = "0.19" }
 bevy_ecs_ldtk = { version = "0.5" }
 bevy_hanabi = { version = "0.5", default-features = false, features = [ "2d" ] }
+leafwing-input-manager = { version = "0.7.0" }
 
 # additional things
 statig = "0.1"
