--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,15 +43,19 @@ default = [
 ]
 
 [dependencies]
-# bevy things
-bevy = { version = "^0.10", default-features = false }
+# libs
 rand = { version = "^0.8" }
+itertools = { version = "^0.10" }
+statig = { version = "^0.3" }
 
 # keep the dependency up to date with bevy_winit
 winit = { version = "^0.27", default-features = false, features = [ "wayland", "x11" ]}
 image = { version = "^0.24", default-features = false }
 
-# plugins etc.
+# Bevy things
+bevy = { version = "^0.10", default-features = false }
+
+# Plugins etc.
 bevy_kira_audio = { version = "^0.15" }
 bevy_asset_loader = { version = "^0.16" }
 bevy-inspector-egui = { version = "^0.18" }
@@ -60,8 +64,7 @@ bevy_rapier2d = { version = "^0.21" }
 bevy_ecs_ldtk = { version = "^0.7" }
 bevy_hanabi = { version = "^0.6", default-features = false, features = [ "2d" ] }
 leafwing-input-manager = { version = "^0.9" }
-itertools = { version = "^0.10" }
-statig = { version = "^0.3" }
+seldom_state = { version = "^0.6" }
 
 [build-dependencies]
 embed-resource = "1.4"
