Prepare for Event Based communication between plugins

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ bevy_rapier2d = { version = "^0.21" }
 bevy_ecs_ldtk = { version = "^0.7" }
 bevy_hanabi = { version = "^0.6", default-features = false, features = [ "2d" ] }
 leafwing-input-manager = { version = "^0.9" }
-seldom_state = { version = "^0.6" }
+seldom_state = { version = "^0.6", features= [ "leafwing_input" ] }
 
 [build-dependencies]
 embed-resource = "1.4"
