--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bevy_game"
+name = "kaginawa"
 version = "0.1.1"
 publish = false
 authors = ["Marcel Ochs <marc3lox@googlemail.com>"]
